--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.7.3",
     "reactstrap": "^9.1.9",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
